--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
     <script type="text/babel" src="components/CallToAction.js"></script>
     <script type="text/babel" src="components/Footer.js"></script>
 
+    <!-- Import new components -->
+    <script type="text/babel" src="components/APIFeatures.js"></script>
+    <script type="text/babel" src="components/BusinessAPI.js"></script>
+    <script type="text/babel" src="components/LiveMarketData.js"></script>
+    <script type="text/babel" src="components/TransactionStatus.js"></script>
+
     <!-- Load the main app script -->
     <script type="text/babel" src="app.js"></script>
 </body>
