--- a/index.html
+++ b/index.html
@@ -20,6 +20,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     
     <title>CoinByte - Revolutionary Stablecoin Payments</title>
+    
+    <!-- AVA Chatbot Script -->
+    <script src='https://cdn.jotfor.ms/s/umd/latest/for-embedded-agent.js'></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", function() {
+        window.AgentInitializer.init({
+          agentRenderURL: "https://agent.jotform.com/01954dc335437d06881a7c4d3f8d1de77912",
+          rootId: "JotformAgent-01954dc335437d06881a7c4d3f8d1de77912",
+          formID: "01954dc335437d06881a7c4d3f8d1de77912",
+          queryParams: ["skipWelcome=1", "maximizable=1"],
+          domain: "https://www.jotform.com",
+          isDraggable: false,
+          background: "linear-gradient(180deg, #6C73A8 0%, #6C73A8 100%)",
+          buttonBackgroundColor: "#0066C3",
+          buttonIconColor: "#FFFFFF",
+          variant: false,
+          customizations: {
+            "greeting": "Yes",
+            "greetingMessage": "Hi! How can I assist you?",
+            "openByDefault": "No",
+            "pulse": "Yes",
+            "position": "right",
+            "autoOpenChatIn": "0"
+          },
+          isVoice: false
+        });
+      });
+    </script>
 </head>
 <body class="bg-[#1A1A1A] text-white">
     <div id="root"></div>
